--- a/AzureProto/App.config
+++ b/AzureProto/App.config
@@ -1,6 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <!--providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers-->
+  </entityFramework>
+  <connectionStrings>
+    <add name="BlobTestEntities" connectionString="metadata=res://*/TestData.csdl|res://*/TestData.ssdl|res://*/TestData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:kristest.database.windows.net;initial catalog=BlobTest;persist security info=True;user id=TheTest;password=Bugz011_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BlobTestEntities1" connectionString="metadata=res://*/TestData.csdl|res://*/TestData.ssdl|res://*/TestData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:kristest.database.windows.net;initial catalog=BlobTest;persist security info=True;user id=TheTest;password=Bugz011_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
